--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,7 +21,7 @@
   <div class="singleBottom">
     <div class="singleContent">{{ .Content }}</div>
     <div class="singleRightBar">
-      {{ partial "rightBar" .}}
+  <!-- {{ partial "rightBar" .}} -->
     </div>
   </div>
 </div>
