make searchbar and posts. also edited the categories

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -42,6 +42,7 @@
       </svg>
     </div>
     <a href="/">Homepage</a>
+    <a href="/posts">Posts</a>
     <a href="/categories">Categories</a>
     <div class="searchButton">
       <input 
