--- a/layouts/categories/list.html
+++ b/layouts/categories/list.html
@@ -1,10 +1,13 @@
 {{ define "main" }} 
 {{ if eq .RelPermalink "/categories/"}} 
-{{ range $.Site.Taxonomies.categories.ByCount }}
-  <a href="/categories/{{ .Name }}">
-    # {{ .Name }} <small>({{.Count}})</small>
-  </a>
-{{end}}
+<div class="categories-grid">
+  {{ range $.Site.Taxonomies.categories.ByCount }}
+    <a href="/categories/{{ .Name }}" class="category-card">
+      <div class="category-name"># {{ .Name }}</div>
+      <div class="category-count">{{ .Count }} {{ if eq .Count 1 }}post{{ else }}posts{{ end }}</div>
+    </a>
+  {{end}}
+</div>
 {{ else }}
 <div class="list">
   {{ range .Paginator.Pages }}
@@ -45,4 +48,5 @@
   </div>
   {{ end }} {{ template "_internal/pagination.html" . }}
 </div>
-{{end}} {{ end }}
+{{end}} 
+{{ end }}
