--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -783,7 +783,7 @@ code {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   background: rgba(0, 0, 0, 0.5);
   z-index: 4;
   backdrop-filter: blur(2px);
