--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -18,5 +18,6 @@
     {{ partial "footer" . }}
   </div>
   <script src="/js/app.js"></script>
+  <script src="/js/copyCode.js"></script>
 </body>
 </html>
