--- a/layouts/partials/rightBar.html
+++ b/layouts/partials/rightBar.html
@@ -1,4 +1,6 @@
 <div class="rightBar">
-  <img src="/images/ads.webp" alt="ad" class="rightBarImg">
-  <img src="/images/adh.webp" alt="ad" class="rightBarImgHr">
+  <div class="toc">
+    <h2>Table of Contents</h2>
+    {{ .TableOfContents }}
+  </div>
 </div>
