adding first privacy policy + fix navbar + disclaimer banner

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,6 +3,7 @@
     <a href="/">itchronicles</a> |
     <a href="/posts">Posts</a> |
     <a href="/categories">Categories</a> |
-    <a href="/sitemap.xml">Sitemap</a>
+    <a href="/sitemap.xml">Sitemap</a> |
+    <a href="/policies/privacy-policy">Privacy Policy</a>
   </div>
 </div>
