--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -11,6 +11,7 @@
 }
 
 body {
+  padding-top: 31px;
   background: var(--bg);
   color: var(--text);
 }
@@ -30,7 +31,7 @@ a {
   padding-left: 20px;
   padding-right: 20px;
   margin: auto;
-  min-height: 100vh;
+  min-height: calc(100vh - 31px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -44,9 +45,24 @@ a {
   justify-content: space-between;
   height: 100px;
   position: sticky;
-  top: 0;
-  background-color: var(--bg);
+  top: 31px;
   z-index: 100;
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 0 20px;
+  width: 100%;
+}
+
+.navbar::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0;
+  width: 100vw;
+  height: 100%;
+  background-color: var(--bg);
+  z-index: -1;
 }
 
 .logo {
@@ -872,3 +888,26 @@ code {
   border-color: #27ae60;
 }
 /* COPY BUTTON END */
+
+/* DEV BANNER START */
+.dev-banner {
+  background-color: #fff3cd;
+  border-bottom: 1px solid #ffeeba;
+  color: #856404;
+  padding: 0.5rem;
+  text-align: center;
+  font-size: 0.8rem;
+  line-height: 1.2;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
+
+.dev-banner p {
+  margin: 0;
+  padding: 0;
+}
+/* DEV BANNER END */
