--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,6 +14,7 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
+  {{ partial "dev-banner" . }}
   <div class="container">
     {{ partial "navbar" . }}
     {{ block "main" . }} {{ end }}
