--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -445,9 +445,22 @@ code {
   }
 
   .singleBottom {
-    flex-direction: column-reverse;
+    display: block;
   }
 
+  .singleContent {
+    width: 100%;
+    max-width: none;
+  }
+
+  .singleRightBar {
+    display: none;
+  }
+
+  .rightBar {
+    display: none;
+  }
+  
   .rightBarImg {
     display: none;
   }
