--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -626,20 +626,28 @@ code {
   }
 
   .singleHeadDetail {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-areas: 
+      "avatar name"
+      "categories categories";
     gap: 10px;
+    align-items: center;
   }
 
-  .singleCategory {
-    padding: 5px;
-    border-radius: 5px;
-    background-color: var(--bgSoft);
-    color: var(--textSoft);
-    font-size: 14px;
-    word-break: break-word;
-    max-width: 100%;
+  .singleAvatar {
+    grid-area: avatar;
+  }
+
+  .singleUserText {
+    grid-area: name;
+  }
+
+  .singleCategories {
+    grid-area: categories;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
   }
 }
 @media (max-width: 640px) {
