--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,5 +27,16 @@
       {{ partial "rightBar" .}}
     </div>
   </div>
+  <!-- Utterances comments section -->
+  <section class="comments">
+    <script src="https://utteranc.es/client.js"
+        repo="itchronicles/blog"
+        issue-term="pathname"
+        label="comment"
+        theme="dark-blue"
+        crossorigin="anonymous"
+        async>
+    </script>
+  </section>
 </div>
 {{ end }}
