--- a/layouts/_default/policy.html
+++ b/layouts/_default/policy.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>{{ .Title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/styles/page.css">
+    <link rel="stylesheet" href="/styles/policy.css">
 </head>
 <body>
     {{ .Content }}
