--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -356,7 +356,7 @@ a {
 code {
   font-family: 'Courier New', Courier, monospace;
   background-color: var(--bgSoft);
-  color: var(--textSoft);
+  color: var(--textSoft) !important;
   padding: 2px 4px;
   border-radius: 4px;
   font-size: 90%;
