imprint and privacy

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,6 +4,7 @@
     <a href="/posts">Posts</a> |
     <a href="/categories">Categories</a> |
     <a href="/sitemap.xml">Sitemap</a> |
-    <a href="/policies/privacy-policy">Privacy Policy</a>
+    <a href="/policies/privacy-policy">Privacy Policy</a> |
+    <a href="/policies/imprint">Imprint</a>
   </div>
 </div>
