--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,6 +13,7 @@
   <script src="/js/search.js" defer></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5241206183807315"
      crossorigin="anonymous"></script>
+  <script defer data-domain="itchronicles.org" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
   <div class="container">
