--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,5 +24,6 @@
   </div>
   <script src="/js/app.js"></script>
   <script src="/js/copyCode.js"></script>
+  <script src="/js/slider.js"></script>
 </body>
 </html>
