--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
   <meta name="google-adsense-account" content="ca-pub-5241206183807315">
   <link rel="stylesheet" href="/styles/style.css">
   <link rel="icon" href="/images/favicon.png" />
+  <link rel="canonical" href="{{ .Permalink }}" />
   <title>{{ .Title }}</title>
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>   <!-- Fuse.js - Lightweight fuzzy-search library used for site search functionality -->
   <script src="/js/search.js" defer></script>
